# cardinal-discord

./: .gitignore  Dockerfile  README.md  actions.js  bot.js  build_docker.sh  create_channel_backup.js  dispatcher.js  force-queue.js  helpText.json  icy.js  ids.json  index.js  mpd-status.js  mpd.js  nicehash.js  package.json  queue.js  settings.js  start.js  status.js  table_create_channel_backup.js  test_icy.js  web.js
Commands/: Ping.js  Queue.js
Core/: Bot.js  Command.js  CommandManager.js  Logger.js  Main.js  Module.js  promisify.js
Core/API/: Command.js  CommandManager.js  Module.js
Core/Brain/: Redis.js  RedisBrain.js
lib/core/: bot.js  logger.js  logger.winston.js  main.js  remote_management.js  secrets.js
lib/core/api/: module.js
lib/core/brain/: postgres.js  redis.js  sql_queries.js
lib/core/test/: fake_bot.js
lib/modules/: dump.js  eval.js  help.js  management.js  math.js  nicehash.js  pingpong.js  queue.js  sfx.js  status.js
lib/queue/: guild.js  queued-media.js  search.js  types.js  utils.js
modules/: dump.js  eval.js  help.js  management.js  math.js  nicehash.js  pingpong.js  queue.js  status.js
queue/: queued-media.js  search.js  utils.js
schema/down/: 0000_guild_tracking.sql
schema/up/: 0000_guild_tracking.sql
test/: queued-media.js
utils/queue_manager/: Cargo.toml
utils/queue_manager/src/: main.rs
