[package]
name = "queue_manager"
version = "0.1.0"
authors = ["mbilker <me@mbilker.us>"]

[[bin]]
doc = false
path = "src/main.rs"
name = "queue_manager"

[dependencies]
ansi_term	= "0.9"
lazy_static	= "0.2"
redis		= "0.8.0"
regex		= "0.2"
serde		= "1.0.15"
serde_derive	= "1.0.15"
serde_json	= "1.0.3"
